--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <img src="./media/typingGameBackground.webp" alt="">
     <label for="Timer" class="timerLabel">Timer</label>
     <div class="timer" id="timer">0</div>
     <label for="wpm" class="wpmLabel">WPM</label>
