--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/media/typingGameLogo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="./media/typingGameLogo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Typing Game</title>
 </head>
 
@@ -20,7 +20,7 @@
     </div>
 
 
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
