--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
 
 <body>
     <img src="./media/typingGameBackground.webp" alt="">
-    <label for="Timer" class="timerLabel">Timer</label>
-    <div class="timer" id="timer">0</div>
-    <label for="wpm" class="wpmLabel">WPM</label>
-    <div class="wpm" id="wpm">0</div>
-    <div class="container" id="container">
-    <div class="quote-display" id="quoteDisplay"></div>
+    <div id="main">
+        <div class="timerDiv">
+            <label for="Timer" class="timerLabel">Timer</label>
+            <div class="timer" id="timer">0</div>
+        </div>
+        <div class="wpmDiv">
+            <label for="wpm" class="wpmLabel">WPM</label>
+            <div class="wpm" id="wpm">0</div>
+        </div>
+        <div class="box">
+            <div class="container" id="container">
+                <div class="quote-display" id="quoteDisplay"></div>
+                </div>
+        </div>
     </div>
 
 
